Fri May 27 17:09:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (str_transcode0): scrub in the given encoding when
	  the source encoding is given, not in the encoding of the
	  receiver.  [ruby-core:75732] [Bug #12431]

Fri May 27 15:07:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): remove nul padding which
	  caused syntax error if fmt is not a string literal.

	* include/ruby/ruby.h (rb_scan_args_verify): suppress array-bounds
	  warnings by old clang.

	* include/ruby/ruby.h (rb_scan_args0): make extractor macros
	  inline functions, which do not varidate the format and are
	  unnecessary to be expanded.

Fri May 27 01:00:36 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* symbol.c (is_identchar): use ISDIGIT instead of rb_enc_isalnum.
	  Though rb_enc_isalnum is encoding aware function, its argument here
	  is *m, which is a single byte. Therefore ISDIGIT is faster.

	* symbol.c (is_special_global_name): ditto.

	* symbol.c (rb_enc_symname_type): ditto.

Fri May 27 00:39:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): add nul padding here to
	  apply to all references.

	* include/ruby/ruby.h (rb_scan_args_verify): move length mismatch
	  check outside conditional operators.

Thu May 26 14:21:10 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_compute_key): Check that the DH
	  has 'p' (the prime) before calling DH_size(). We can create a DH with
	  no parameter but DH_size() does not check and dereferences NULL.
	  [ruby-core:75720] [Bug #12428]

	* ext/openssl/ossl_pkey_dsa.c (ossl_dsa_sign): Ditto. DSA_size() does
	  not check dsa->q.

	* ext/openssl/ossl_pkey_rsa.c (ossl_rsa_public_encrypt,
	  ossl_rsa_public_decrypt, ossl_rsa_private_encrypt,
	  ossl_rsa_private_decrypt): Ditto. RSA_size() does not check rsa->n.

Thu May 26 14:13:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
