@@ -2388,7 +2388,9 @@ sv_i(ID key, VALUE v, void *a)
 static enum rb_id_table_iterator_result
 rb_local_constants_i(ID const_name, VALUE const_value, void *ary)
 {
-    rb_ary_push((VALUE)ary, ID2SYM(const_name));
+    if (rb_is_const_id(const_name)) {
+	rb_ary_push((VALUE)ary, ID2SYM(const_name));
+    }
     return ID_TABLE_CONTINUE;
 }
 
